// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link does not render the external icon even if the href is external 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-2 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-2:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-2:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-2:visited:not(:disabled) {
  color: #903D91;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
  margin-top: calc(-4px/2);
  margin-bottom: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
  margin-top: calc(4px/2);
  margin-bottom: calc(4px/2);
}

<a
    class="emotion-2"
    href="www.google.it"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        test link text
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link renders as expected in default state 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-2 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-2:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-2:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-2:visited:not(:disabled) {
  color: #903D91;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
  margin-top: calc(-4px/2);
  margin-bottom: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
  margin-top: calc(4px/2);
  margin-bottom: calc(4px/2);
}

<a
    class="emotion-2"
    href="#"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        test link test
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link renders correctly with noUnderline property 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
  margin-top: calc(-4px/2);
  margin-bottom: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
  margin-top: calc(4px/2);
  margin-bottom: calc(4px/2);
}

.emotion-2 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-2 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-2:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-2:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-2:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-2:visited:not(:disabled) {
  color: #903D91;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

<a
    class="emotion-2"
    href="#"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      >
        test link text
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Link renders the external icon even if the href is internal 1`] = `
<DocumentFragment>
  .emotion-4 {
  display: inline-block;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-4 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-4:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-4:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-4:visited:not(:disabled) {
  color: #903D91;
}

.emotion-4:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-4 {
    vertical-align: text-bottom;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
  margin-top: calc(-4px/2);
  margin-bottom: calc(-4px/2);
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
  margin-top: calc(4px/2);
  margin-bottom: calc(4px/2);
}

.emotion-1 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  display: inline-block;
}

<a
    class="emotion-4"
    href="/relative"
  >
    <div
      class="emotion-3"
    >
      <div
        class="emotion-0"
      >
        test link text
      </div>
      <div
        class="emotion-0"
      >
        <svg
          aria-labelledby="mock-bui-1"
          class="emotion-1"
          viewBox="0 0 24 24"
        >
          <title
            id="mock-bui-1"
          >
            External link
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
      </div>
    </div>
  </a>
</DocumentFragment>
`;
